[package]
name = "hermes-provider-switcher"
version = "1.0.0"
description = "Hermes Provider Switcher - 一键切换 AI Provider 配置"
authors = ["snail"]
edition = "2021"

[lib]
name = "hermes_provider_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
